hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/toption.php.exp
File "toption.php", line 11, characters 10-14:
Invalid return type (Typing[4110])
File "toption.php", line 10, characters 28-37:
This is a tuple of size 2
File "toption.php", line 4, characters 17-23:
It is incompatible with a dynamic value
